--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 				<div class="cs-container">
 					<div class="cs-content">
 						<span class="cs-topper">Why Choose Us</span>
-						<h2 class="cs-title">Why Choose Our Gym</h2>
+						<h2 class="cs-title">Why Choose Raven Dev Gym</h2>
 						<picture class="cs-picture">
 							<!--Mobile Image-->
 							<source
@@ -1152,9 +1152,7 @@
 					<div class="cs-info-group">
 						<div class="cs-info">
 							<span class="cs-topper">Location</span>
-							<span class="cs-detail"
-								>XYZ<br />123</span
-							>
+							<span class="cs-detail">XYZ<br />123</span>
 						</div>
 						<div class="cs-info">
 							<span class="cs-topper">Working Hours</span>
@@ -1264,9 +1262,7 @@
 						</picture>
 						<div class="cs-flex">
 							<h3 class="cs-h3">Location</h3>
-							<span class="cs-card-info"
-								>XYZ, WARSAW</span
-							>
+							<span class="cs-card-info">XYZ, WARSAW</span>
 						</div>
 					</div>
 					<div class="cs-card">
@@ -1386,9 +1382,7 @@
 						</div>
 						<div class="cs-contact-info">
 							<span class="cs-topper">Visit our location</span>
-							<a href="" class="cs-contact-link"
-								>2137, WARSAW</a
-							>
+							<a href="" class="cs-contact-link">2137, WARSAW</a>
 						</div>
 					</div>
 				</div>
